--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,17 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body
+<body>
+  <div class="container">
 
-   <ul>
+    <ul class="nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
-   </ul>
+    </ul>
 
-<%= yield %>
+
+    <%= yield %>
+  </div>
 
 </body>
 </html>
