--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Post</h1>
+<h1>Edit Post</h1> 
 <div class="row">
   <div class="span-6">
     <p>Guidelines for new posts:</p>
@@ -12,7 +12,7 @@
   <div class="span-6">
     <%= form_for @post, html: { class: 'form-horizontal' } do |f| %>
       <div class="control-group">
-        <%= f.label :title, class: 'control-label' %>
+        <%= f.label(:title, class: 'control-label') %>
         <div class="controls">
           <%= f.text_field :title %>
         </div>
@@ -31,3 +31,12 @@
     <% end %>
   </div>
 </div>
+
+
+<!--
+<%= form_for @post do |f| %>
+  <%= f.text_field :title %>
+  <%= f.text_area :body %>
+  <%= f.submit "Save" %>
+<% end %>
+-->
