--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="control-group">
     <%= f.label :body, class: 'control-label' %>
-    <div class="controls">
+    <div class="controlse">
       <%= f.text_area :body, rows: 8 %>
     </div>
   </div>
