--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,10 +39,14 @@
 
 <!-- endof show comments -->
 
-  <div class="span4">
+  
     <% if can? :create, @comment %>
       <%#= link_to "New Comment", new_topic_post_comment_path(@topic, @post), class: 'btn btn-large btn-block' %>
-    <%= render partial: "comments/form", locals: { topic: @topic,post: @post, comment: Comment.new } %>
+    <div class="span4">
+      <p>New Comment</p>
+    </div>
+    <br>
+      <%= render partial: "comments/form", locals: { topic: @topic,post: @post, comment: Comment.new } %>
 
     <%end%>
   </div>
