--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<small>
+<!-- <small>
   <p><%= comment.body %></p>
 </small>
 
@@ -7,4 +7,19 @@
   submitted <%= time_ago_in_words(comment.created_at) %> ago by 
   <%= comment.user.name %></p>
 </small>
-<br/>
+<br/> -->
+
+<div class="media">
+  <%= link_to '#', class: 'pull-left' do %>
+    <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
+  <% end %>
+  <div class="media-body">
+    <small>
+      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+      <% if can? :destroy, comment %>
+        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+      <% end %>
+    </small>
+    <p><%= comment.body %></p>
+  </div>
+</div>
