--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,4 @@
-<!-- <small>
-  <p><%= comment.body %></p>
-</small>
-
-<small>
-  <p><%= image_tag(comment.user.avatar.tiny.url) if comment.user.avatar? %>
-  submitted <%= time_ago_in_words(comment.created_at) %> ago by 
-  <%= comment.user.name %></p>
-</small>
-<br/> -->
-
-<div class="media">
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
   <%= link_to '#', class: 'pull-left' do %>
     <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
   <% end %>
@@ -22,4 +11,4 @@
     </small>
     <p><%= comment.body %></p>
   </div>
-</div>
+<% end %>
