--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,6 +32,8 @@
       </small>
     </div>
 
+    <%= render partial: 'favorites/favorite', locals: {topic: @topic, post: @post} %>
+
   </div>
 </div>
 
