sync imac with mbp changes over weekend?

--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -5,10 +5,11 @@
         <i class= "icon-star-empty"></i>&nbsp; Unfavorite
       <% end %>
     <% else %>
-      <%= form_for [topic, post, Favorite.new] do |f| %>
-        <%= button_tag type: 'submit', class: 'btn btn-small' do %>
+      <%= link_to [topic, post, Favorite.new], class: 'btn btn-small', method: :post do %>
+      <%#= form_for [topic, post, Favorite.new] do |f| %>
+        <%#= button_tag type: 'submit', class: 'btn btn-small' do %>
           <i class="icon-star"></i>&nbsp; Favorite
-        <% end %>
+        <%# end %>
       <% end %>
     <% end %>
   </div>
