--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,29 +7,9 @@
 <div class="row">
   <div class="span8">
     <p class="lead"><%= @topic.description %></p>
-    <% @posts.each do |post| %>
-      <div class="media">
-        <div class="media-body">
-          <h4 class="media-heading">
-            <%= render partial: 'votes/voter', locals: { topic: @topic, post: post } %>
-            <%= link_to (markdown post.title), [@topic, post] %>
-          </h4>
+    
+    <%= render @posts %>
 
-          <small>
-            <%= image_tag(post.post_images.thumb.url) if post.post_images? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by 
-            <%= post.user.name %>
-          </small>
-
-          <small>
-            <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by 
-            <%= post.user.name %><br/>
-            <%= post.comments.count %> Comments
-          </small>
-        </div>
-      </div>
-    <% end %>
     <%= will_paginate @posts %>
   </div>
   <div class="span4">
