Created user profile

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="media">
   <%= render partial: 'votes/voter', locals: { topic: post.topic, post: post } %>
   <%= link_to [post.topic, post], class: 'pull-left' do %>
-    <%= image_tag(post.image.thumb.url) if post.image? %>
+    <%= image_tag(post.post_images.thumb.url) if post.post_images? %>
   <% end %>
   <div class="media-body">
     <h4 class="media-heading">
