Created user profile

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -55,7 +55,7 @@
 <!-- endof show comments -->
 
 
-  <% if can? :create, @comment %>
+  <% if can? :create, Comment %>
       <%#= link_to "New Comment", new_topic_post_comment_path(@topic, @post), class: 'btn btn-large btn-block' %>
     <div class="span4">
       <p>New Comment</p>
