--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,8 +2,10 @@
   <div class="span8">
     <h1>Popular</h1>
     <p class="lead">Active posts this week</p>
-    <%= render partial: 'posts/post', collection: @posts %>
-    <%= will_paginate @posts %>
+      <div class="toggle-popular">
+        <%= render partial: 'posts/post', collection: @posts %>
+        <%= will_paginate @posts %>
+      </div>
   </div>
   <div class="span4">
   </div>
